# rikabot

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  build.rs  config.toml  mise.toml
.codex/environments/: environment.toml
.codex/skills/create-prd/: SKILL.md
.codex/skills/create-prd/agents/: openai.yaml
.codex/skills/create-prd/references/: prd-template-guidelines.md
.codex/skills/create-prd/scripts/: create-prd.py
.codex/skills/web-spec/: SKILL.md
.zed/: tasks.json
docs/prd/: 0001-init.md  0002-skills.md  0003-filesystem-tools.md  0004-openai.md  0005-svelte-project.md  0006-sessions.md  0007-memory.md  0008-kill-switch.md  0009-mcp-support.md  0010-mcp-oauth.md  0011-guardrails.md  0012-ask-for-approval.md  0013-remove-system-prompts.md  0014-web-react-shadcn.md  0015-markdown-render.md  0016-code-block-render.md  0017-slash-command-autocomplete.md  0018-web-fetch-web-search.md  0019-cli.md  0020-process-tool.md  0021-event-trigger.md  0022-shell-path-arg.md  0023-refactor-skills-mcp-settings.md  0024-frontend-playwright-e2e-test-coverage.md  0025-websocket-to-rest-crud-migration.md  0026-parallel-session-runs.md  0027-response-streaming.md
scripts/: release.sh
skills/github/: SKILL.md
skills/web-spec/: SKILL.md
skills/web-spec/agents/: openai.yaml
src/: cli.rs  config.rs  config_store.rs  main.rs  mcp_runtime.rs
src/agent/: mod.rs
src/gateway/: mod.rs  rest.rs  ws.rs
src/permissions/: mod.rs
src/prompt/: mod.rs
src/providers/: mod.rs  openai.rs  openai_codex.rs  openrouter.rs
src/session/: mod.rs
src/skills/: mod.rs
src/system_events/: mod.rs
src/tools/: filesystem_glob.rs  filesystem_read.rs  filesystem_search.rs  filesystem_write.rs  mcp_client.rs  mcp_oauth.rs  mcp_protocol.rs  mcp_tool.rs  mcp_transport.rs  mod.rs  process.rs  shell.rs  web_fetch.rs  web_search.rs
templates/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
tests/e2e/: package.json  playwright.config.mjs
tests/e2e/config/: rika.e2e.template.toml
tests/e2e/scripts/: prepare-e2e-env.sh  start-backend-e2e.sh
tests/e2e/specs/: chat-agent-response.spec.ts  command-palette.spec.ts  helpers.ts  kill-switch.spec.ts  mcp-settings.spec.ts  parallel-session-runs.spec.ts  permissions-settings.spec.ts  settings-general.spec.ts  settings-route.spec.ts  skills-settings.spec.ts  slash-commands.spec.ts  thread-lifecycle.spec.ts  threads-explorer.spec.ts  tool-approval.spec.ts
tests/e2e/support/: mock-openai.mjs
web/: README.md  components.json  index.html  package.json  rsbuild.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json
web/src/: App.svelte  app.css  main.tsx  router.tsx  styles.css
web/src/components/: app-shell.tsx  command-palette.tsx  left-rail.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  command.tsx  input.tsx  popover.tsx  scroll-area.tsx  separator.tsx  sheet.tsx  switch.tsx  tabs.tsx  textarea.tsx
web/src/context/: app-store.tsx
web/src/lib/: markdown.ts  runtime-env.ts  utils.ts
web/src/lib/api/: axios.ts
web/src/routes/: chat-page.tsx  settings-page.tsx  threads-page.tsx
web/src/types/: app.ts
