[package]
name = "rikabot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "net", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
axum = { version = "0.8", features = ["ws"] }
futures-util = { version = "0.3", features = ["sink"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["timeout"] }
