[package]
name = "rikabot"
version = "0.2.0"
description = "Rika is a lightweight, local-first AI assistant platform."
repository = "https://github.com/jaehong21/rikabot"
license = "MIT"
edition = "2021"
include = [
  "src/**",
  "Cargo.toml",
  "Cargo.lock",
  "build.rs",
  "README.md",
  "config.toml",
  "templates/**",
  "web/dist/**",
]

[[bin]]
name = "rika"
path = "src/main.rs"

[dependencies]
# Async runtime & utilities
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "net", "sync", "io-util"] }
futures-util = { version = "0.3", features = ["sink"] }
async-trait = "0.1"

# Web framework & HTTP
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["timeout", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Utilities
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
webbrowser = "1"
url = "2"
rust-embed = "8"
mime_guess = "2"
notify = "6"
